<resources>
    <string name="app_name">InventoryMNG</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Enviar</string>
    <string name="registro">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="codigo">Código</string>
    <string name="numero">Cantidad</string>
    <string name="desc">Descripción</string>
    <string name="prov">Proveedor</string>
    <string name="add_date">Fecha de entrada</string>
    <string name="cad_date">Fecha de caducidad</string>
    <string name="crear">guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="añadirproducto">Añadir nuevo producto</string>
    <string name="introducirProducto">Introduzca los datos del producto</string>
    <string name="eliminarproducto">Eliminar producto</string>
    <string name="modificarproducto">Modificar producto</string>
    <string name="ajustes">Ajustes</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="salir">Salir de la aplicación</string>
    <string name="buscar">Buscar</string>
    <string name="action_search">Búsqueda</string>
    <string name="guardar">Guardar</string>
</resources>
