<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.david.inventorymng.View.CreateProduct"
    tools:showIn="@layout/add_producto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="16sp" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edNum" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="16sp" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edCod" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edDesc" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:text="@string/prov"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"
                    android:textSize="16sp" />


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/edProv" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:text="@string/add_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textStyle="normal|bold"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:ems="10"
                    android:id="@+id/edAdd_Date"
                    android:inputType="none" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/cad_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:ems="10"
                android:id="@+id/edCad_Date"
                android:inputType="none" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:text="@string/cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idBtnCancelar"
                android:layout_weight="1"
                android:textColor="@color/textBtnColor"
                android:background="@color/colorButton"
                android:layout_marginRight="2.5dp"
                android:layout_marginLeft="5dp" />

            <Button
                android:text="@string/crear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idBtnCrear"
                android:layout_weight="1"
                android:textColorLink="?attr/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/textBtnColor"
                android:background="@color/colorButton"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="5dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
